Updating OH month

--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
 
 <P class="toppadrightcol bottomlinepad"><U>General</U></P>
 
-<P class="indentmedium"><B>Office hours:</B> Will resume in the week of Sept. 25, 2017.</P>
+<P class="indentmedium"><B>Office hours:</B> Will resume in the week of September 25, 2017.</P>
 <P class="indentmedium"><B>About me:</B> <A target="_top" href="Bio.htm">Bio</A>, <A target="_top" href="BenRead-CurriculumVitae.pdf">curriculum vitae</A>, <A target="_top" href="http://politics.ucsc.edu/faculty/singleton.php?&singleton=true&cruz_id=bread">UCSC profile</A>, <A target="_top" href="http://scholar.google.com/citations?user=4f7G7WAAAAAJ">Google Scholar</A></P>
 <P class="indentmedium"><B>Institutional links:</B> <A target="_top" href="http://www.ucsc.edu/">UC Santa Cruz</A>, <A target="_top" href="http://politics.ucsc.edu/">Politics Department</A>, <A target="_top" href="http://eastasianstudies.ucsc.edu/index.html">East Asian Studies</A>, <A target="_top" href="UCSC_on_One_Page.htm">UCSC on One Page</A></P>
 <P class="indentmedium"><B>Maps:</B> <A target="_top" href="http://maps.google.com/maps?hl=en&ie=UTF8&ll=37.326489,-121.964722&spn=2.131594,5.625&z=8">Area</A>, <A target="_top" href="http://maps.google.com/maps?hl=en&ie=UTF8&ll=36.979244,-122.028923&spn=0.066921,0.175781&z=13">city</A>, <A target="_top" href="http://maps.ucsc.edu/">campus</A>, <A target="_top" href="http://maps.ucsc.edu/content/438/map_detail">college</A>, <A target="_top" href="http://skyvector.com/?ll=36.99926243851739,-122.05453491423482&chart=301&zoom=2">aeronautical</A></P>
