restoring aspects of UCSC on one page

--- a/about/UCSC_on_One_Page.html
+++ b/about/UCSC_on_One_Page.html
@@ -12,8 +12,8 @@
 <!-- Left Column -->
 <div id="leftcol">
 
-<P class="brdn-topleft"><img src="elements/BenReaddotnet.gif" alt="Ben Read dot net"></P>
-<P class="homelink-left">[<A target="_top" href="http://benread.net/index.htm">home</A>]</P>
+<P class="brdn-topleft"><img src="BenReaddotnet.gif" alt="Ben Read dot net"></P>
+<P class="homelink-left">[<A target="_top" href="http://benread.net/index.html">home</A>]</P>
 </div>
 
 <!-- Right Column -->
